Fix compilation on Linux kernel 6.16+
Add ccflags-y declarations alongside EXTRA_CFLAGS for modern kernel build system compatibility. Resolves incompatible pointer type error in ethtool get_ts_info callback.

--- a/TimeStick2/DRV/Makefile
+++ b/TimeStick2/DRV/Makefile
@@ -17,57 +17,72 @@ ENABLE_QUEUE_PRIORITY = n
 obj-m := $(TARGET).o
 $(TARGET)-objs := ax_main.o ax88179_178a.o ax88179a_772d.o
 EXTRA_CFLAGS = -fno-pie
+ccflags-y = -fno-pie
 TOOL_EXTRA_CFLAGS = -Werror
 
 ifeq ($(ENABLE_IOCTL_DEBUG), y)
 	EXTRA_CFLAGS += -DENABLE_IOCTL_DEBUG
+	ccflags-y += -DENABLE_IOCTL_DEBUG
 	TOOL_EXTRA_CFLAGS += -DENABLE_IOCTL_DEBUG
 endif
 
 ifeq ($(ENABLE_AUTODETACH_FUNC), y)
 	EXTRA_CFLAGS += -DENABLE_AUTODETACH_FUNC
+	ccflags-y += -DENABLE_AUTODETACH_FUNC
 endif
 
 ifeq ($(ENABLE_MAC_PASS), y)
 	EXTRA_CFLAGS += -DENABLE_MAC_PASS
+	ccflags-y += -DENABLE_MAC_PASS
 endif
 
 ifeq ($(ENABLE_DWC3_ENHANCE), y)
 	EXTRA_CFLAGS += -DENABLE_DWC3_ENHANCE
+	ccflags-y += -DENABLE_DWC3_ENHANCE
 ifeq ($(ENABLE_INT_POLLING), n)
 	EXTRA_CFLAGS += -DENABLE_INT_POLLING
+	ccflags-y += -DENABLE_INT_POLLING
 endif
 endif
 
 ifeq ($(ENABLE_AUTOSUSPEND), y)
 	EXTRA_CFLAGS += -DENABLE_AUTOSUSPEND
+	ccflags-y += -DENABLE_AUTOSUSPEND
 endif
 
 ifeq ($(ENABLE_TX_TASKLET), y)
 	EXTRA_CFLAGS += -DENABLE_TX_TASKLET
+	ccflags-y += -DENABLE_TX_TASKLET
 endif
 ifeq ($(ENABLE_RX_TASKLET), y)
 	EXTRA_CFLAGS += -DENABLE_RX_TASKLET
+	ccflags-y += -DENABLE_RX_TASKLET
 endif
 
 ifeq ($(ENABLE_PTP_FUNC), y)
 	$(TARGET)-objs += ax_ptp.o
 	EXTRA_CFLAGS += -DENABLE_PTP_FUNC
+	ccflags-y += -DENABLE_PTP_FUNC
 ifeq ($(ENABLE_PTP_DEBUG), y)
 	EXTRA_CFLAGS += -DENABLE_PTP_DEBUG
+	ccflags-y += -DENABLE_PTP_DEBUG
 endif
 endif
 
 ifeq ($(ENABLE_QUEUE_PRIORITY), y)
 	EXTRA_CFLAGS += -DENABLE_QUEUE_PRIORITY
+	ccflags-y += -DENABLE_QUEUE_PRIORITY
 endif
 
 	EXTRA_CFLAGS += -DENABLE_AX88279
+	ccflags-y += -DENABLE_AX88279
 ifeq ($(ENABLE_MACSEC_FUNC), y)
 	$(TARGET)-objs += ax_macsec.o
 	EXTRA_CFLAGS += -DENABLE_MACSEC_FUNC
+	ccflags-y += -DENABLE_MACSEC_FUNC
 endif
 	EXTRA_CFLAGS += -DENABLE_AX88279_MINIP_2_5G
+	ccflags-y += -DENABLE_AX88279_MINIP_2_5G
 
 
 ifneq (,$(filter $(SUBLEVEL),14 15 16 17 18 19 20 21))
